[gd_scene load_steps=20 format=2]

[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://images/triangle.png" type="Texture" id=2]
[ext_resource path="res://scenes/playing_scene/combat_skill_line.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/playing_scene/combat_overlay.gd" type="Script" id=4]

[sub_resource type="Gradient" id=14]
interpolation_mode = 2
offsets = PoolRealArray( 0.2, 0.4, 0.6, 0.8 )
colors = PoolColorArray( 0, 0, 0, 0.752941, 0.376471, 0.376471, 0.376471, 0, 0.568627, 0.568627, 0.568627, 0, 0, 0, 0, 0.752941 )

[sub_resource type="GradientTexture2D" id=15]
gradient = SubResource( 14 )
fill_from = Vector2( 1, 1 )

[sub_resource type="StyleBoxTexture" id=16]
texture = SubResource( 15 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=24]
content_margin_left = 4.0
bg_color = Color( 0, 0, 0, 0.752941 )

[sub_resource type="DynamicFont" id=11]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=17]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 512, 443 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 0.498039 )

[sub_resource type="StyleBoxFlat" id=23]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0, 0, 0.752941 )

[sub_resource type="DynamicFont" id=20]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=21]
default_font = SubResource( 20 )

[sub_resource type="DynamicFont" id=26]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 443, 512, -443 )

[node name="CombatOverlay" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
custom_styles/panel = SubResource( 16 )
script = ExtResource( 4 )

[node name="MyControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2

[node name="NextBuf" type="Label" parent="MyControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 232.0
margin_top = -96.0
margin_right = 448.0
margin_bottom = -48.0
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 24 )
text = "力+2 "
valign = 1
clip_text = true

[node name="Picture" type="TextureRect" parent="MyControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = -108.0
margin_right = 224.0
margin_bottom = 108.0
mouse_filter = 2
expand = true
stretch_mode = 7

[node name="TotalPower" type="Label" parent="MyControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 4.0
margin_top = -32.0
margin_right = 68.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "3"
align = 1
valign = 1

[node name="TotalHit" type="Label" parent="MyControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = 40.0
margin_right = 64.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 17 )
custom_styles/normal = SubResource( 25 )
text = "1"
align = 1
valign = 1

[node name="StatePanel" type="Panel" parent="MyControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 104.0
mouse_filter = 2
custom_styles/panel = SubResource( 19 )

[node name="SkillContainer" type="PanelContainer" parent="MyControl"]
margin_left = 72.0
margin_top = 120.0
margin_right = 392.0
margin_bottom = 136.0
custom_styles/panel = SubResource( 23 )

[node name="SkillList" type="VBoxContainer" parent="MyControl/SkillContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 40.0
mouse_filter = 2
theme = SubResource( 21 )
custom_constants/separation = 8

[node name="CombatSkillLine" parent="MyControl/SkillContainer/SkillList" instance=ExtResource( 3 )]
margin_right = 304.0

[node name="RivalControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2

[node name="NextBuf" type="Label" parent="RivalControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = 48.0
margin_right = -232.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 13 )
text = "力+2 "
align = 2
valign = 1

[node name="Picture" type="TextureRect" parent="RivalControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -108.0
margin_right = -72.0
margin_bottom = 108.0
mouse_filter = 2
expand = true
stretch_mode = 7

[node name="TotalHit" type="Label" parent="RivalControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -80.0
margin_right = -24.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 26 )
custom_styles/normal = SubResource( 27 )
text = "1"
align = 1
valign = 1

[node name="TotalPower" type="Label" parent="RivalControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -32.0
margin_right = -4.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "3"
align = 1
valign = 1

[node name="StatePanel2" type="Panel" parent="RivalControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -104.0
margin_right = -72.0
margin_bottom = -16.0
mouse_filter = 2
custom_styles/panel = SubResource( 19 )

[node name="SkillContainer" type="PanelContainer" parent="RivalControl"]
margin_left = -392.0
margin_top = -168.0
margin_right = -72.0
margin_bottom = -120.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 160, 24 )
custom_styles/panel = SubResource( 23 )

[node name="SkillList" type="VBoxContainer" parent="RivalControl/SkillContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 40.0
mouse_filter = 2
theme = SubResource( 21 )
custom_constants/separation = 8

[node name="CombatSkillLine" parent="RivalControl/SkillContainer/SkillList" instance=ExtResource( 3 )]
margin_right = 304.0
